apps/sabnzbd/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
spec:
  selector:
    matchLabels:
      app: sabnzbd
  replicas: 1
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
        - name: sabnzbd
          image: binhex/arch-sabnzbdvpn:4.2.3-1-06
          ports:
            - containerPort: 8080
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
            privileged: true # required for wireguard
          volumeMounts:
            - name: data
              mountPath: /config
            - name: downloads
              mountPath: /mnt/tank/Downloads
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: sabnzbd
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads-pvc
