apps/sabnzbd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-internal-network-only@kubernetescrd
spec:
  rules:
    - host: sabnzbd.internal.neils.house
      http:
        paths:
          - backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sabnzbd.internal.neils.house
